modo oscuro añadido

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,7 +17,7 @@ body{
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-/* Seccion con fondo */
+/* Seccion home */
 
 .home{
     background-image: url('../images/fondo.jpg');
