--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,8 +7,23 @@
     --prussian-blue: #002D40;
 }
 
+@font-face {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;  
+    src: url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300;1,400&display=swap');
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400; 
+    src: url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300;1,400&display=swap');
+}
+
+
 body{
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Poppins', 'Monserrat', sans-serif;
 }
 
 /* Seccion home */
@@ -23,6 +38,7 @@ body{
 /* Seccion sobre mi */
 
 .foto-container{
+    position: relative;
     width: 350px;
     height: 350px;
     border-radius: 50%;
@@ -37,6 +53,30 @@ body{
     object-position: center;
 }
 
+.overlay-socials{
+    position: absolute;
+    background-color: rgba(0, 46, 66, 0.7);
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    color: white;
+    opacity: 0;
+}
+
+.foto-container:hover .overlay-socials{
+    opacity: 1;
+    height: 40%;
+}
+
+.foto-container .overlay-socials{
+    transition: opacity 0.7s ease, height 0.7s ease;
+}
+
 /* Seccion habilidades */
 .skill-item > img{
     width: 40%;
@@ -44,23 +84,31 @@ body{
 }
 
 /* Seccion proyectos */
+.card-img-top{
+    transition: filter 0.7s ease-out;
+}
+
 .overlay{
-    opacity: 0;
     position: absolute;
-    top: 0;
+    bottom: 0;
     left: 0;
-    background-color: rgb(0, 46, 66, 0.7);
+    background-color: rgba(0, 46, 66, 0.7);
     width: 100%;
-    height: 100%;
+    height: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: .5s;
+    opacity: 0;
+    transition: opacity 0.7s ease-out, height 0.7s ease-out;
 }
 
-.overlay:hover{
+.proyecto:hover .overlay{
     opacity: 1;
-    cursor: pointer;
+    height: 100%;
+}
+
+.proyecto:hover .card-img-top{
+    filter: blur(3px);
 }
 
 /* Sobreescribiendo colores de botones de bootstrap */
@@ -77,7 +125,6 @@ body{
 /* Enlaces de bootstrap */
 .nav-link:hover{
     color: var(--eastern-blue);
-    transform: scale(1.1);
 }
 
 /* Responsive */
