--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -77,7 +77,7 @@ body{
 
 .overlay-socials{
     position: absolute;
-    background-color: rgba(0, 46, 66, 0.7);
+    background-color: rgba(0, 46, 66, 0.8);
     bottom: 0;
     left: 0;
     width: 100%;
@@ -102,19 +102,20 @@ body{
 /* Seccion habilidades */
 
 .skill{
-    transition: background-color 0.7s ease !important;
+    width: 170px;
+    transition: background-color 0.7s ease, color 0.7s ease;
 }
 
 .skill:hover{
-    background-color: #1AA6B7 !important;
+    background-color: #FF414D !important;
     color: #fff;
     cursor: pointer;
 }
 
-.skill-item > img{
+/* .skill-item > img{
     width: 40%;
     object-fit: cover;
-}
+} */
 
 /* Seccion de servicios */
 
@@ -123,10 +124,18 @@ body{
 }
 
 .service-item:hover{
-    background-color: #F56A79 !important;
+    background-color: #FF414D !important;
     color: #fff !important;
     transform: scale(1.1);
     cursor: pointer;
+}
+
+.service-item:hover .icon > i{
+    color: #fff;
+}
+
+.icon > i{
+    color: #FF414D;
 }
 
 /* Seccion proyectos */
@@ -139,7 +148,7 @@ body{
     position: absolute;
     bottom: 0;
     left: 0;
-    background-color: rgba(0, 46, 66, 0.7);
+    background-color: rgba(0, 46, 66, 0.8);
     width: 100%;
     height: 0;
     display: flex;
@@ -182,5 +191,9 @@ body{
     .foto-container{
         width: 300px;
         height: 300px;
+    }
+
+    .skill{
+        width: 130px;
     }
 }
