--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -162,6 +162,20 @@ body{
     filter: blur(3px);
 }
 
+/* Seccion Contacto */
+.overlay-form{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.8); /* Fondo semitransparente blanco */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+}
+
 /* Sobreescribiendo colores de botones de bootstrap */
 
 .btn-primary:hover{
