--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,6 +5,32 @@
     --coral-red: #FF414D;
     --eastern-blue: #1AA6B7;
     --prussian-blue: #002D40;
+
+    --ship-cove: #758EB7;
+    --kimberly: #6F5F90;
+    --strikemaster: #8A5082;
+    --geraldine: #FF7889;
+    --casper: #A5CAD2;
+
+    --color1: #7aacb3;
+    --color2: #4c6e81;
+    --color3: #cf8da7;
+    --color4: #aa5377;
+    --color5: #3b3759;
+
+    --blue-dianne: #264653;
+    --jungle-green: #2A9D8F;
+    --rob-roy: #E9C46A;
+    --sandy-brown: #F4A261;
+    --burnt-sienna: #E76F51;
+
+    --morning-glory: #9AE1E2;
+
+    /* AQUA */
+    --a1: #3BAFDA;
+    --a2: #4FC1E9;
+
+    --banana-yellow: #FFE720;
 }
 
 @font-face {
@@ -31,12 +57,14 @@ body{
     width: 60px;
     height: 60px;
     margin-bottom: 90px;
+    background-color: var(--blue-dianne);
     z-index: 1;
     animation: popup .7s ease-out;
 }
 
 #scrollToTop:hover{
-    background-color: var(--coral-red) !important;
+    background-color: var(--color2) !important;
+    box-shadow: 0 0 15px var(--color2);
 }
 
 @keyframes popup {
@@ -82,7 +110,7 @@ body{
 /* Seccion home */
 
 .home{
-    background-image: url('../images/fondo.jpg');
+    background-image: url('../images/fondo2.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -95,8 +123,10 @@ body{
     width: 350px;
     height: 350px;
     border-radius: 50%;
-    border: 7px solid var(--iceberg);
+    /* border: 7px solid var(--iceberg); */
+    box-shadow: 0 0 25px var(--color2);
     overflow: hidden;
+    transition: box-shadow 0.7s ease-in-out;
 }
 
 .foto-container > img{
@@ -108,7 +138,7 @@ body{
 
 .overlay-socials{
     position: absolute;
-    background-color: rgba(0, 46, 66, 0.8);
+    background-color: rgba(76, 110, 129, 0.8);
     bottom: 0;
     left: 0;
     width: 100%;
@@ -119,15 +149,12 @@ body{
     gap: 10px;
     color: white;
     opacity: 0;
+    transition: opacity 0.7s ease, height 0.7s ease;
 }
 
 .foto-container:hover .overlay-socials{
     opacity: 1;
     height: 40%;
-}
-
-.foto-container .overlay-socials{
-    transition: opacity 0.7s ease, height 0.7s ease;
 }
 
 /* Seccion habilidades */
@@ -138,8 +165,10 @@ body{
 }
 
 .skill:hover{
-    background-color: #FF414D !important;
+    background-color: var(--color2) !important;
     color: #fff !important;
+    box-shadow: 0 0 15px var(--color2);
+    transform: scale(1.1) !important;
     cursor: pointer;
 }
 
@@ -150,7 +179,7 @@ body{
 }
 
 .service-item:hover{
-    background-color: #FF414D !important;
+    background-color: var(--color2) !important;
     color: #fff !important;
     transform: scale(1.05);
     cursor: pointer;
@@ -161,7 +190,7 @@ body{
 }
 
 .icon > i{
-    color: #FF414D;
+    color: var(--color2);
 }
 
 /* Seccion proyectos */
@@ -174,13 +203,14 @@ body{
     position: absolute;
     bottom: 0;
     left: 0;
-    background-color: rgba(0, 46, 66, 0.8);
+    background-color: rgba(76, 110, 129, 0.8);
     width: 100%;
     height: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     opacity: 0;
+    box-shadow: 0 0 15px var(--color2);
     transition: opacity 0.7s ease-out, height 0.7s ease-out;
 }
 
@@ -213,20 +243,68 @@ body{
 
 /* Sobreescribiendo colores de botones de bootstrap */
 
+.btn-primary{
+    background-color: var(--color5);
+    border-color: var(--color5);
+}
+
 .btn-primary:hover{
-    background-color: var(--eastern-blue);
-    border-color: var(--eastern-blue);
+    background-color: var(--kimberly);
+    border-color: var(--kimberly);
+    box-shadow: 0 0 15px var(--kimberly);
+}
+
+.btn-danger{
+    background-color: var(--blue-dianne);
+    border-color: var(--blue-dianne);
 }
 
 .btn-danger:hover{
-    background-color: var(--coral-red);
-    border-color: var(--coral-red);
+    background-color: var(--color2);
+    border-color: var(--color2);
+    box-shadow: 0 0 15px var(--color2);
+}
+
+.btn-success{
+    background-color: var(--jungle-green);
+    border-color: var(--jungle-green);
+}
+
+.btn-success:hover{
+    background-color: var(--eastern-blue);
+    border-color: var(--eastern-blue);
+    box-shadow: 0 0 15px var(--eastern-blue);
+}
+
+.btn-info{
+    background-color: var(--a1);
+    border-color: var(--a1);
+}
+
+.btn-info:hover{
+    background-color: var(--a2);
+    border-color: var(--a2);
+    box-shadow: 0 0 15px var(--a2);
+}
+
+/* Badge de bootstrap */
+
+.text-bg-primary{
+    background-color: var(--color5) !important;
+}
+
+/* Textos bootstrap */
+
+.text-warning{
+    color: var(--banana-yellow) !important;
+    text-shadow: 0 0 15px var(--banana-yellow);
 }
 
 /* Enlaces de bootstrap */
 
 .nav-link:hover{
-    color: var(--eastern-blue);
+    color: var(--a1);
+    text-shadow: 0 0 15px var(--color2);
 }
 
 .social-link{
@@ -235,6 +313,11 @@ body{
 
 .social-link:hover{
     transform: scale(1.2);
+}
+
+/* inputs de bootstrap */
+.form-control:focus{
+    box-shadow: 0 0 0 0.25rem rgba(76, 110, 129, 0.40);
 }
 
 /* Responsive */
