--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,6 @@
+@import url('bootstrap-styles.css');
+@import url('responsive.css');
+
 :root{
     /* Paleta de colores */
     --iceberg: #D9ECF2;
@@ -47,7 +50,6 @@
     src: url('https://fonts.gstatic.com/s/montserrat/v22/JTUSjIg1_i6t8kCHKm459Wlhzg.woff2') format('woff2');
 }
 
-
 body{
     font-family: 'Poppins', 'Monserrat', sans-serif;
 }
@@ -59,11 +61,12 @@ body{
     margin-bottom: 90px;
     background-color: var(--blue-dianne);
     z-index: 1;
-    animation: popup .7s ease-out;
+    transition: background-color 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
+    animation: popup .7s ease-in-out;
 }
 
 #scrollToTop:hover{
-    background-color: var(--color2) !important;
+    background-color: var(--color2);
     box-shadow: 0 0 15px var(--color2);
 }
 
@@ -89,7 +92,7 @@ body{
     top: 0;
     width: 100%;
     z-index: 1;
-    animation: fadeInOut 0.7s ease;
+    animation: fadeInOut 0.7s ease-in-out;
 }
 
 @keyframes fadeInOut {
@@ -123,10 +126,8 @@ body{
     width: 350px;
     height: 350px;
     border-radius: 50%;
-    /* border: 7px solid var(--iceberg); */
-    box-shadow: 0 0 25px var(--color2);
+    border: 7px solid var(--ship-cove);
     overflow: hidden;
-    transition: box-shadow 0.7s ease-in-out;
 }
 
 .foto-container > img{
@@ -149,7 +150,7 @@ body{
     gap: 10px;
     color: white;
     opacity: 0;
-    transition: opacity 0.7s ease, height 0.7s ease;
+    transition: opacity 0.7s ease, height 0.7s ease-in-out;
 }
 
 .foto-container:hover .overlay-socials{
@@ -161,7 +162,7 @@ body{
 
 .skill{
     width: 170px;
-    transition: background-color 0.7s ease;
+    transition: background-color 0.7s ease-in-out;
 }
 
 .skill:hover{
@@ -175,7 +176,7 @@ body{
 /* Seccion de servicios */
 
 .service-item{
-    transition: background-color 0.7s ease, transform 0.7s ease;
+    transition: background-color 0.7s ease-in-out, transform 0.7s ease-in-out;
 }
 
 .service-item:hover{
@@ -196,7 +197,7 @@ body{
 /* Seccion proyectos */
 
 .card-img-top{
-    transition: filter 0.7s ease-out;
+    transition: filter 0.7s ease-in-out;
 }
 
 .overlay{
@@ -211,7 +212,7 @@ body{
     align-items: center;
     opacity: 0;
     box-shadow: 0 0 15px var(--color2);
-    transition: opacity 0.7s ease-out, height 0.7s ease-out;
+    transition: opacity 0.7s ease-in-out, height 0.7s ease-in-out;
 }
 
 .proyecto:hover .overlay{
@@ -241,94 +242,12 @@ body{
     z-index: 2;
 }
 
-/* Sobreescribiendo colores de botones de bootstrap */
-
-.btn-primary{
-    background-color: var(--color5);
-    border-color: var(--color5);
-}
-
-.btn-primary:hover{
-    background-color: var(--kimberly);
-    border-color: var(--kimberly);
-    box-shadow: 0 0 15px var(--kimberly);
-}
-
-.btn-danger{
-    background-color: var(--blue-dianne);
-    border-color: var(--blue-dianne);
-}
-
-.btn-danger:hover{
-    background-color: var(--color2);
-    border-color: var(--color2);
-    box-shadow: 0 0 15px var(--color2);
-}
-
-.btn-success{
-    background-color: var(--jungle-green);
-    border-color: var(--jungle-green);
-}
-
-.btn-success:hover{
-    background-color: var(--eastern-blue);
-    border-color: var(--eastern-blue);
-    box-shadow: 0 0 15px var(--eastern-blue);
-}
-
-.btn-info{
-    background-color: var(--a1);
-    border-color: var(--a1);
-}
-
-.btn-info:hover{
-    background-color: var(--a2);
-    border-color: var(--a2);
-    box-shadow: 0 0 15px var(--a2);
-}
-
-/* Badge de bootstrap */
-
-.text-bg-primary{
-    background-color: var(--color5) !important;
-}
-
-/* Textos bootstrap */
-
-.text-warning{
-    color: var(--banana-yellow) !important;
-    text-shadow: 0 0 15px var(--banana-yellow);
-}
-
-/* Enlaces de bootstrap */
-
-.nav-link:hover{
-    color: var(--a1);
-    text-shadow: 0 0 15px var(--color2);
-}
+/* Enlaces */
 
 .social-link{
-    transition: transform 0.7s ease-out;
+    transition: transform 0.7s ease-in-out;
 }
 
 .social-link:hover{
     transform: scale(1.2);
-}
-
-/* inputs de bootstrap */
-.form-control:focus{
-    box-shadow: 0 0 0 0.25rem rgba(76, 110, 129, 0.40);
-}
-
-/* Responsive */
-
-@media (max-width: 400px){
-    .foto-container{
-        width: 300px;
-        height: 300px;
-    }
-
-    .skill{
-        width: 130px;
-    }
 }
