Pequeño cambio en el modal de proyectos

--- a/assets/css/general-styles.css
+++ b/assets/css/general-styles.css
@@ -231,6 +231,10 @@ body{
     transition: opacity 0.25s ease-in-out !important;
 }
 
+.modal-close{
+    border: none !important;
+}
+
 /* Seccion Contacto */
 .overlay-form{
     position: fixed;
