--- a/assets/css/general-styles.css
+++ b/assets/css/general-styles.css
@@ -51,6 +51,21 @@ body{
     font-family: 'Poppins', 'Monserrat', sans-serif;
 }
 
+/* Preloader */
+
+.overlay-pre{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(76, 110, 129, 0.8); /* Fondo semitransparente azul */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 2;
+}
+
 /* Boton de ir hacia arriba */
 #scrollToTop{
     width: 60px;
@@ -163,8 +178,9 @@ body{
 /* Seccion habilidades */
 
 .skill{
+    aspect-ratio: 1/1;
     width: 170px;
-    transition: background-color 0.7s ease-in-out;
+    transition: background-color 0.7s ease-in-out, transform 0.7s ease-in-out, box-shadow 0.7s ease-in-out;
 }
 
 .skill:hover{
@@ -236,18 +252,7 @@ body{
 }
 
 /* Seccion Contacto */
-.overlay-form{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(255, 255, 255, 0.8); /* Fondo semitransparente blanco */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 2;
-}
+
 
 /* Enlaces */
 
